--- a/css/test_projection_1.css
+++ b/css/test_projection_1.css
@@ -7,7 +7,7 @@
 */
 
 body {
-    background: #130520;
+    background: #211e20;
     color: #fff;
     font-family: open-sans, sans-serif, serif;
     font-size: 87.5%;
@@ -23,11 +23,12 @@ div#container {
 }
 
 div#wrapper {
-    width: 100%;
+    width: 85%;
     height: 100%;
     overflow: hidden;
     position: relative;
     background-color: #3c3c3c;
+    display: inline-block;
 }
 
 div#wrapper section {
@@ -40,4 +41,58 @@ section > * {
     float: left;
     margin-left: 15px;
     cursor: pointer;
+}
+
+div#levels-zone {
+    display: inline-block;
+    position: absolute;
+    background-color: #454545;
+    width: 15%;
+    min-height: 100%;
+    height: 100%;
+    color: #fff;
+}
+
+div#levels-zone ul {
+    margin: 0;
+    padding: 0;
+}
+
+div#levels-zone ul li {
+    background: #d7d9c7;
+    list-style-type: none;
+    margin: 0 0 10px 0;
+    padding: 5px 15px;
+}
+
+div#levels-zone a {
+    color: #464b48;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+div#levels-zone a:hover {
+    color: #fbffc6;
+}
+
+div#touch-zone {
+    position: absolute;
+    height: 20%;
+    min-height: 20%;
+    width: 30%;
+    background: #fff;
+    bottom: 0;
+    right: 0;
+}
+
+div#touch-zone span {
+    position: relative;
+    font-size: 1.5em;
+    font-family: Lobster;
+    font-weight: bold;
+    display: block;
+    color: #000;
+    width: 6.7em;
+    margin: auto;
+    top: 45%;
 }
