--- a/css/test_projection_1.css
+++ b/css/test_projection_1.css
@@ -75,6 +75,32 @@ div#levels-zone a:hover {
     color: #fbffc6;
 }
 
+div#gesture-icons {
+    position: absolute;
+    top: 75%;
+    right: 0;
+    width: 30%;
+}
+
+div#gesture-icons img {
+    position: relative;
+    float: right;
+}
+
+div#gesture-icons span {
+    font-size: 1.5em;
+    font-family: Lobster;
+    font-weight: bold;
+    color: #fff;
+    margin-right: 20px;
+    display: block;
+    position: absolute;
+}
+
+div#gesture-icons img {
+    margin-left: 10px;
+}
+
 div#touch-zone {
     position: absolute;
     height: 20%;
@@ -83,16 +109,5 @@ div#touch-zone {
     background: #fff;
     bottom: 0;
     right: 0;
-}
-
-div#touch-zone span {
-    position: relative;
-    font-size: 1.5em;
-    font-family: Lobster;
-    font-weight: bold;
-    display: block;
-    color: #000;
-    width: 6.7em;
-    margin: auto;
-    top: 45%;
+    z-index: 10;
 }
