--- a/css/test_projection_1.css
+++ b/css/test_projection_1.css
@@ -75,39 +75,26 @@ div#levels-zone a:hover {
     color: #fbffc6;
 }
 
-div#gesture-icons {
-    position: absolute;
-    top: 75%;
-    right: 0;
-    width: 30%;
-}
-
-div#gesture-icons img {
-    position: relative;
-    float: right;
-}
-
-div#gesture-icons span {
-    font-size: 1.5em;
-    font-family: Lobster;
-    font-weight: bold;
-    color: #fff;
-    margin-right: 20px;
-    display: block;
-    position: absolute;
-}
-
-div#gesture-icons img {
-    margin-left: 10px;
-}
-
 div#touch-zone {
     position: absolute;
+    bottom: 0;
+    right: 0;
     height: 20%;
     min-height: 20%;
     width: 30%;
-    background: #fff;
-    bottom: 0;
-    right: 0;
-    z-index: 10;
+    font-family: Lobster;
+    font-size: 1.6em;
 }
+
+div#touch-zone img {
+    position: relative;
+    float: right;
+    margin-left: 10px;
+}
+
+div#touch-zone div.white-zone {
+    background: #fff;
+    height: 100%;
+    min-height: 100%;
+}
+
