--- a/test/css/test_projection_2.css
+++ b/test/css/test_projection_2.css
@@ -109,6 +109,13 @@ div#touch-zone {
     position: relative;
 }
 
+div#touch-layer {
+    position: absolute;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+}
+
 div#touch-infos {
     float: right;
     text-align: center;
