--- a/test/css/test_projection_1.css
+++ b/test/css/test_projection_1.css
@@ -14,17 +14,17 @@ body {
 }
 
 div#container {
-    margin: auto;
-    width: 80%;
-    height: 80%;
-    
     position: relative;
-    min-height: 80%;
+    margin: auto;
+    height: 100%;
+    min-height: 100%;
+    width: 100%;
 }
 
 div#wrapper {
     width: 85%;
     height: 100%;
+    min-height: 100%;
     overflow: hidden;
     position: relative;
     background-color: #3c3c3c;
@@ -63,6 +63,7 @@ div#levels-zone ul li {
     list-style-type: none;
     margin: 0 0 10px 0;
     padding: 5px 15px;
+    cursor: pointer;
 }
 
 div#levels-zone a {
